force-app/main/default/objects/Case/fields/Customer_Services_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Services_Comments__c</fullName>
    <inlineHelpText>Enter any internal comments</inlineHelpText>
    <label>Customer Services Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>