force-app/main/default/objects/Case/fields/FixMyStreet_Public_Comment__c.field-meta.xml
<CustomField>
    <fullName>FixMyStreet_Public_Comment__c</fullName>
    <inlineHelpText>This test will be shown to the public when the case is closed.</inlineHelpText>
    <label>FixMyStreet Public Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>