force-app/main/default/objects/Case/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Social Care</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Blue Badges</fullName>
            </value>
            <value>
                <fullName>Children Social Care</fullName>
            </value>
            <value>
                <fullName>Council Tax</fullName>
            </value>
            <value>
                <fullName>Democratic services</fullName>
            </value>
            <value>
                <fullName>Elections</fullName>
            </value>
            <value>
                <fullName>Environmental issues</fullName>
            </value>
            <value>
                <fullName>Highways</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Registrars</fullName>
            </value>
            <value>
                <fullName>School Admissions</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Waste</fullName>
            </value>
            <value>
                <fullName>Street Scene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>