force-app/main/default/objects/Case/fields/Service_Area_Detail__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_Detail__c</fullName>
    <label>Service Area - Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed Bin</fullName>
            </value>
            <value>
                <fullName>Damaged Bin</fullName>
            </value>
            <value>
                <fullName>Replacement Bin</fullName>
            </value>
            <value>
                <fullName>Remove Bin</fullName>
            </value>
            <value>
                <fullName>Additional Bin</fullName>
            </value>
            <value>
                <fullName>New Property Bin</fullName>
            </value>
            <value>
                <fullName>Communal Bin Issue</fullName>
            </value>
            <value>
                <fullName>Apply for Assisted Collection</fullName>
            </value>
            <value>
                <fullName>Bulky Collection</fullName>
            </value>
            <value>
                <fullName>General Waste</fullName>
            </value>
            <value>
                <fullName>Street Cleansing</fullName>
            </value>
            <value>
                <fullName>Abandoned Vehicles</fullName>
            </value>
            <value>
                <fullName>Discarded Syringes</fullName>
            </value>
            <value>
                <fullName>Trees or Vegetation</fullName>
            </value>
            <value>
                <fullName>Dead Animal</fullName>
            </value>
            <value>
                <fullName>Missed Grass Cutting</fullName>
            </value>
            <value>
                <fullName>Graffiti</fullName>
            </value>
            <value>
                <fullName>Fly Tipping</fullName>
            </value>
            <value>
                <fullName>Fly Posting</fullName>
            </value>
            <value>
                <fullName>Change of Circs</fullName>
            </value>
            <value>
                <fullName>Kerbs</fullName>
            </value>
            <value>
                <fullName>Traffic Signals</fullName>
            </value>
            <value>
                <fullName>Rights of Way</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Street Lighting</fullName>
            </value>
            <value>
                <fullName>Street Name Plate</fullName>
            </value>
            <value>
                <fullName>Street Furniture</fullName>
            </value>
            <value>
                <fullName>Retaining Wall</fullName>
            </value>
            <value>
                <fullName>Road Signage</fullName>
            </value>
            <value>
                <fullName>Footway or Footpath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>