force-app/main/default/objects/Case/recordTypes/FixMyStreet.recordType-meta.xml
<RecordType>
    <fullName>FixMyStreet</fullName>
    <active>true</active>
    <businessProcess>FixMyStreetProcess</businessProcess>
    <description>FixMyStreet Records</description>
    <label>FixMyStreet</label>
</RecordType>