force-app/main/default/objects/Case/validationRules/Close_FixMyStreet_Case_needs_comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_FixMyStreet_Case_needs_comments</fullName>
    <active>true</active>
    <description>This prevents fixmystreet records being closed without comments</description>
    <errorConditionFormula>ISPICKVAL(Status , &#39;Closed&#39;)  &amp;&amp;  FixMyStreet_Public_Comment__c  = &#39;&#39;  &amp;&amp;   ISCHANGED(Status)</errorConditionFormula>
    <errorMessage>This case can only be closed if there is a publc comment in the record. Please note that this comment will be sent to FixMyStreet if this is where this was originally created.</errorMessage>
</ValidationRule>